# g4numi

./: .gitignore  CMakeLists.txt  ProcessG4NuMI.py  compare_mc_reweight_files.py  make_mcreweight_files.py  makemacro.py  renameG4Numi.py
cmake/: FindDK2NU.cmake
dataProducts/: CMakeLists.txt
exec/: CMakeLists.txt
include/: NumiDataInput.hh  NumiMagneticField.hh  NumiNuWeight.hh  NumiRunActionMessenger.hh  NumiTrackInformation.hh
macros/: CMakeLists.txt
plot/: CMakeLists.txt
src/: CMakeLists.txt  NA49DetectorConstruction.cc  NA49PrimaryGeneratorAction.cc  NA49TrackingAction.cc  NumiAnalysis.cc  NumiBaffle.cc  NumiDataInput.cc  NumiDecayPipe.cc  NumiDecayPipeMagneticField.cc  NumiDetectorConstruction.cc  NumiDetectorMessenger.cc  NumiHadronAbsorber.cc  NumiHorn1.cc  NumiHorn2.cc  NumiHorns.cc  NumiImpWeight.cc  NumiMagneticField.cc  NumiMaterials.cc  NumiNOvATarget.cc  NumiNuWeight.cc  NumiPrimaryGeneratorAction.cc  NumiPrimaryMessenger.cc  NumiRunAction.cc  NumiRunActionMessenger.cc  NumiSecMonitors.cc  NumiStackingAction.cc  NumiSteppingAction.cc  NumiTarget.cc  NumiTargetHall.cc  NumiTrackInformation.cc  NumiTrajectory.cc
studies/: CMakeLists.txt  G4MinervaPionIXS.hh  G4MinervaProtonIXS.hh
